# dwcoa-financials

./: .gitignore  Makefile  README.md  template.yaml  transaction-categorization-feature.md
.github/workflows/: ci.yml  deploy.yml
.specify/memory/: constitution.md
backend/: __init__.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  main.py
backend/app/models/: entities.py
backend/app/routes/: auth.py  budgets.py  categories.py  dashboard.py  dues.py  reports.py  rules.py  statement.py  transactions.py  units.py
backend/app/services/: budget_calc.py  categorizer.py  csv_processor.py  database.py  pdf_generator.py
backend/app/utils/: auth.py  s3.py
backend/sql/: rules.sql  schema.sql  seed.sql
backend/tests/: conftest.py  test_budget_calc.py  test_categorizer.py  test_csv_processor.py
docs/: statement-tracking-requirements.md
frontend/: app.js  index.html  styles.css
specs/: CONSTITUTION.md
specs/001-financial-tracker/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  training-data.md
specs/001-financial-tracker/contracts/: api.yaml
specs/002-unit-statement-tracking/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-unit-statement-tracking/checklists/: requirements.md
specs/002-unit-statement-tracking/contracts/: api.yaml
